--- a/projeto_python_data_science.ipynb
+++ b/projeto_python_data_science.ipynb
@@ -1259,13 +1259,33 @@
     {
       "cell_type": "code",
       "source": [
-        "media = float(input('Digite a média: '))"
+        "media = float(input('Digite a média: '))\n",
+        "\n",
+        "if media >=6.0:\n",
+        "  print('Aprovado')\n",
+        "elif 6.0 > media >= 4.0:\n",
+        "  print('Recuperação')\n",
+        "else:\n",
+        "  print('Reprovado')"
       ],
       "metadata": {
-        "id": "UJCHKoX54dc2"
+        "id": "UJCHKoX54dc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d988a275-1173-4b64-e8e8-e5ca5accb2db"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a média: 8\n",
+            "Aprovado\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
