--- a/projeto_python_data_science.ipynb
+++ b/projeto_python_data_science.ipynb
@@ -1292,7 +1292,7 @@
       "source": [
         "## Operadores\n",
         "\n",
-        "Durante a construção de comandos por vezes precisamos de uma elaboração maior de da expressão condicional, necessitando que alguns operadores lógicos estejam integrados."
+        "Durante a construção de comandos por vezes precisamos de uma elaboração maior de da expressão condicional, necessitando que alguns operadores lógicos estejam integrados. Sendo o famoso True e False\n"
       ],
       "metadata": {
         "id": "Tf1wSOem6iwZ"
@@ -1330,11 +1330,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "t1 = t2 = True\n",
+        "f1 = f2 = False"
+      ],
       "metadata": {
-        "id": "Fs_qb0dLOXsj"
+        "id": "K-glQzQTLK5Y"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
